@@ -155,7 +155,7 @@ BR2_OPTIMIZE_2=y
 #
 # Advanced
 #
-BR2_CONFIG_CACHE=y
+# BR2_CONFIG_CACHE is not set
 
 #
 # Toolchain
