@@ -109,7 +109,7 @@ BR2_OPTIMIZE_S=y
 #
 # Advanced
 #
-BR2_CONFIG_CACHE=y
+# BR2_CONFIG_CACHE is not set
 
 #
 # Toolchain
